syntax = "proto3";

package knowledgebase_service;

import "google/protobuf/empty.proto";

option go_package = "gitlab.ai-yuanjing.cn/ai-platform-private/backend-used-bff/common-api/api/proto/knowledgebase-service";

service KnowledgeBaseService {
  // 获取知识库列表
  rpc SelectKnowledgeList(KnowledgeSelectReq) returns (KnowledgeSelectListResp) {}
  // 获取知识库详情
  rpc SelectKnowledgeDetailById(KnowledgeDetailSelectReq) returns (KnowledgeInfo) {}
  // 获取知识库详情列表
  rpc SelectKnowledgeDetailByIdList(KnowledgeDetailSelectListReq) returns (KnowledgeDetailSelectListResp) {}
  // 获取知识库详情
  rpc SelectKnowledgeDetailByName(KnowledgeDetailSelectReq) returns (KnowledgeInfo) {}
  // 新增知识库
  rpc CreateKnowledge(CreateKnowledgeReq) returns (CreateKnowledgeResp) {}
  // 修改知识库
  rpc UpdateKnowledge(UpdateKnowledgeReq) returns (google.protobuf.Empty) {}
  // 删除文档知识分类
  rpc DeleteKnowledge(DeleteKnowledgeReq) returns (google.protobuf.Empty) {}
  // 知识库命中测试
  rpc KnowledgeHit(KnowledgeHitReq) returns (KnowledgeHitResp) {}
  // 获取知识库元数据（key + type）
  rpc GetKnowledgeMetaSelect(SelectKnowledgeMetaReq) returns (SelectKnowledgeMetaResp) {}
  // 获取知识库元数据值列表 (合并过的value)
  rpc GetKnowledgeMetaValueList(KnowledgeMetaValueListReq) returns (KnowledgeMetaValueListResp) {}
  // 更新知识库元数据值列表
  rpc UpdateKnowledgeMetaValue(UpdateKnowledgeMetaValueReq) returns (google.protobuf.Empty) {}
}

message DeleteKnowledgeReq{
  string knowledgeId = 1;
  string userId = 2;
  string orgId = 3;
}

message UpdateKnowledgeReq{
  string knowledgeId = 1;
  string name = 2;
  string description = 3;
  string userId = 4;
  string orgId = 5;
}

message KnowledgeHitReq{
  string orgId = 1;
  string userId = 2;
  string question = 3; //问题
  repeated KnowledgeParams knowledgeList = 4;//知识库参数列表
  KnowledgeMatchParams knowledgeMatchParams = 5; //模型匹配方式
}


message KnowledgeMatchParams{
  string  matchType = 1; //matchType：vector（向量检索）、text（文本检索）、mix（混合检索：向量+文本）
  string  rerankModelId = 2;//rerank模型id
  int32 priorityMatch = 3;// 权重匹配，只有在混合检索模式下，选择权重设置后，这个才设置为1
  float semanticsPriority = 4;// 语义权重
  float keywordPriority = 5;// 关键词权重
  int32 topK = 6;//topK 获取最高的几行
  float score = 7;//score 过滤分数阈值
  float termWeight = 8; // 关键词系数
  bool termWeightEnable = 9; // 关键词系数开关
}

message KnowledgeParams{
  string knowledgeId = 1; // 知识库id
  MetaDataFilterParams metaDataFilterParams = 2; // 元数据过滤参数
}

message MetaDataFilterParams{
  bool filterEnable = 1; // 元数据过滤开关
  string filterLogicType = 2; // 元数据过滤逻辑类型
  repeated MetaFilterParams metaFilterParams = 3; // 元数据过滤参数
}

message MetaFilterParams{
  string key = 1; // 元数据key
  string type = 2; // 元数据类型
  string value = 3; // 元数据值
  string condition = 4; // 元数据过滤条件
}

message CreateKnowledgeReq{
  string userId = 1;
  string orgId = 2;
  string name = 3;
  string description = 4;
  EmbeddingModelInfo embeddingModelInfo = 5;
}

message EmbeddingModelInfo{
  string modelId = 1;
}

message CreateKnowledgeResp{
  string knowledgeId = 1;
}

message KnowledgeSelectReq {
  string userId = 1;
  string orgId = 2;
  string name = 3; //知识库名称，支持模糊搜索
  repeated string tagIdList = 4; //知识库id 列表
}

message KnowledgeSelectListResp {
  repeated KnowledgeInfo knowledgeList = 1; //知识库列表
}

message KnowledgeDetailSelectReq {
  string userId = 1;
  string orgId = 2;
  string knowledgeId = 3; //知识库id
  string knowledgeName = 4; // 知识库名称
}

message KnowledgeDetailSelectListReq{
  string userId = 1;
  string orgId = 2;
  repeated string knowledgeIds = 3; //知识库id列表
}

message KnowledgeDetailSelectListResp{
  repeated KnowledgeInfo list = 1; // 知识库详情列表
  int32 total = 2;
}

//知识库信息
message KnowledgeInfo {
  string knowledgeId = 1; //知识库id
  string name = 2; //知识库名称
  int32 docCount = 3;
  string description = 4;
  EmbeddingModelInfo embeddingModelInfo = 5;
  repeated KnowledgeTagInfo knowledgeTagInfoList = 6;
  string createdAt = 7;
}

message KnowledgeTagInfo {
  string tagId = 1;//知识库标签id
  string tagName = 2; //知识库标签名称
}

message KnowledgeMetaData{
  string metaId = 1;
  string key = 2;// key
  string type = 3; // type(time, string, number)
  string value = 4;
}

message KnowledgeHitResp{
  string prompt = 1;
  repeated double score = 2;
  repeated KnowledgeSearchInfo searchList = 3;
}

message KnowledgeSearchInfo{
  string title = 1;
  string snippet = 2;
  string knowledgeName = 3;
  repeated ChildContent childContentList = 4;
  repeated float childScore = 5;
}

message ChildContent{
  string childSnippet = 1;
  float score = 2;
}

message SelectKnowledgeMetaReq{
  string userId = 1;
  string orgId = 2;
  string knowledgeId = 3;
}

message SelectKnowledgeMetaResp{
  repeated KnowledgeMetaData metaList = 1;
}

message KnowledgeMetaValueListReq{
  string userId = 1;
  string orgId = 2;
  repeated string docIdList = 3;
}

message KnowledgeMetaValueListResp{
  repeated KnowledgeMetaValues metaList = 1;
}

message KnowledgeMetaValues{
  string metaId = 1;
  string key = 2;// key
  string type = 3; // type(time, string, number)
  repeated string valueList = 4;
}

message UpdateKnowledgeMetaValueReq{
  string userId = 1;
  string orgId = 2;
  bool applyToSelected = 3;
  repeated string docIdList = 4;
  repeated MetaValueOperation metaList = 5;
}

message MetaValueOperation{
  KnowledgeMetaData metaInfo = 1;
  string option = 2; // add, delete, update
}